test-cases/final-dump/trait_error_not_a_trait.exp
Error detected during type checking of module(s) trait_error_not_a_trait
final-dump/trait_error_not_a_trait.wybe:1:1: Abstract procedure not_a_trait defined in a non-trait module
