test-cases/final-dump/trait_error_not_a_trait.wybe
abstract not_a_trait(x:T<:int): string
